# advent_of_code_2022

./: creation1.py  day1.py  day10.py  day11.py  day12.py  day2.py  day20.py  day21.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  inputs.py  main.py  pyproject.toml
inputs/: d10.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  leaderboard.py
